# xi-io-emulator

./: .env.local.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  walkthrough.md
.github/: copilot-instructions.md  dependabot.yml
.memory/: security.md
docs/: INDEX.md  agent-handoff-antigravity.md  agent-handoff-arcade-home.md  agent-handoff-controller-launch.md  agent-handoff-cursor-arcade-home.md  agent-handoff-game-ingress.md  agent-handoff-image-hydration.md  agent-handoff-search-and-filters.md  agent-master-prompt-current-next.md  agent-master-prompt-cursor-current.md  agent-master-prompt-image-hydration.md  agent-master-prompt-pass-b-pass-c.md  agent-master-prompt-standardization-audit.md  arcade-home-report.md  arcade-ui-product-pivot.md  backlog.md  cheats-hacks-and-overlay-strategy.md  framework-alignment.md  game-ingress-implementation-report.md  iceberg-delivery-roadmap.md  library-cockpit-report.md  local-bootstrap-report.md  product-brief.md  search-and-filters-report.md  settings-map.md
public/: display-identify.html
scripts/: pass-b-cleanup-sessions.sh  repo-health-audit.sh  tauri-build-watch.mjs  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: display_service.rs  emulator_process.rs  engine_launch.rs  fceux_input_config.rs  game_session.rs  gamepad_guid.rs  lib.rs  main.rs  platform.rs  play_session_db.rs  session_startup.rs  shell_exit_input.rs  shell_restore.rs  single_instance.rs  window_registry.rs
(+144 files in other folders)
