[package]
name = "xi-io-emulator"
version = "0.1.0"
description = "xi-io Emulator arcade shell"
authors = ["xi-io"]
edition = "2021"
default-run = "xi-io-emulator"

[lib]
name = "xi_io_emulator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros"] }
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
